# harness-mcp

./: .gitignore  README.md  build.sh  go.mod  go.sum  pyproject.toml  pyvenv.cfg
client/: client.go  connectors.go  logs.go  pipelines.go  pullrequest.go  repositories.go
client/dto/: error.go  logs.go  pipeline.go  pullrequest.go  repositories.go  scope.go
cmd/harness-mcp-server/: main.go
cmd/harness-mcp-server/config/: config.go
pkg/harness/: config.go  connectors.go  logs.go  pagination.go  pipelines.go  pullreq.go  repositories.go  scope.go  server.go  tools.go
pkg/toolsets/: toolsets.go
src/harness_mcp/: connectors.py  server.py
