[project]
name = "harness-mcp"
version = "0.1.0"
description = "MCP server for Harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.6.0",]
[[project.authors]]
name = "Vistaar Juneja"
email = "vistaar.juneja@harness.io"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
harness-mcp = "harness_mcp:main"
